--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "hubot-irc": "~0.2.0",
     "htmlparser": "^1.7.7",
     "soupselect": "^0.2.0",
-    "jsdom": "^0.10.1"
+    "jsdom": "^0.10.1",
+    "hubot-cron": "^0.1.0"
   },
   "engines": {
     "node": ">= 0.8.x",
