--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "htmlparser": "^1.7.7",
     "soupselect": "^0.2.0",
     "jsdom": "^0.10.1",
-    "hubot-cron": "^0.1.0"
+    "hubot-cron": "^0.1.0",
+    "lodash": "^2.4.1"
   },
   "engines": {
     "node": ">= 0.8.x",
