--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "soupselect": "^0.2.0",
     "jsdom": "^0.10.1",
     "hubot-cron": "^0.1.0",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "cheerio": "^0.13.1",
+    "node-icu-charset-detector": "0.0.7",
+    "iconv": "^2.0.7"
   },
   "engines": {
     "node": ">= 0.8.x",
