--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-irc": "~0.2.0",
-    "htmlparser": "^1.7.7",
-    "soupselect": "^0.2.0",
-    "jsdom": "^0.10.1",
     "hubot-cron": "^0.1.0",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "hubot-pagetitle": "0.0.1"
   },
   "engines": {
     "node": ">= 0.8.x",
