--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "hubot-irc": "~0.2.0",
     "hubot-cron": "^0.1.0",
     "lodash": "^2.4.1",
-    "hubot-pagetitle": "0.0.1"
+    "hubot-pagetitle": "0.0.1",
+    "hubot-suddendeath": "0.0.3"
   },
   "engines": {
     "node": ">= 0.8.x",
