--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "hubot-irc": "~0.2.0",
     "hubot-cron": "^0.1.0",
     "lodash": "^2.4.1",
-    "hubot-pagetitle": "0.0.1"
+    "hubot-calculator": ">= 0.2.0"
   },
   "engines": {
     "node": ">= 0.8.x",
